
  - We now synthesize the :authority pseudoheader on HTTP/2.

  - We now synthesize the Host header on HTTP/1.0 and HTTP/2.

  - Remote errors, when detected, are now notified to async applications.

* HTTP Client

  We added 429 to the list of HTTP status codes that allow retrying requests.

  We now handle the Retry-After: header of 429 HTTP status codes.

* Maven plugin upgrades

  - maven-deploy-plugin to 3.1.3 (was 2.8.2)
  - maven-clean-plugin to 3.4.1 (was 3.1.0)
  - maven-install-plugin to 3.1.3 (was 2.5.2)
  - build-helper-maven-plugin to 3.6.0 (was 3.2.0)
  - maven-enforcer-plugin to 3.5.0 (was 3.0.0-M1)
  - maven-compiler-plugin to 3.14.0 (was 3.8.1)
  - maven-resources-plugin to 3.3.1 (was 3.2.0)
  - maven-assembly-plugin to 3.7.1 (was 3.3.0)
  - maven-release-plugin to 3.1.1 (was 2.5.3)
  - maven-javadoc-plugin to 3.11.2 (was 3.2.0)
  - maven-jar-plugin to 3.4.2 (was 3.2.0)

Platform 3.27

* Java version support

  - We increased the minimum Java version to 17.

  - We now support Java 21.

* Maven

  We increased the minimum Maven version to 3.6.3

* HTTP and JAX-RS

  We have upgraded to Jetty 12, Jakarta EE 10, and JAX-RS 3.1.0
  from Jetty 11, Jakarta EE 9, and JAX-RS 3.0.0

  INCOMPATIBLE CHANGE: HttpServerModule.withSessionHandler() now binds an
  org.eclipse.jetty.ee10.servlet.SessionHandler.

* Configuration

  In order to support newer versions of Java,
  ConfigAssertions now uses ByteBuddy instead of cglib.

  INCOMPATIBLE CHANGE: ConfigAssertions.assertRecordedDefaults()
  can no longer test config classes that are package private or have
  package private configuration attributes. The configuration classes
  and their configuration getters and setters must be made public.

* Library upgrades

  - Jersey to 3.1.10 (was 3.0.10)
  - jakarta.annotation-api to 2.1.1 (was 2.1.0)
  - jakarta.ws.rs-api to 3.1.0 (was 3.0.0)
  - javassist to 3.30.2-GA (was 3.29.0-GA)
  - jetty to 12.0.16 (was 11.0.4) (CVE-2024-6763)